# Python

./: 01.py  02.py  03.py  03.txt  main.py  pyproject.toml  test.txt
FBC/: 02.py  03.py
Udemy/: 31.py  43.py  p09.py  p10.py  p11.py  p12-sub1.py  p12.py  p13.py  p14.py  p14data.py  p15.py  p16.py  p18-1.py  p18-2.py  p18.py  p24-1.py  p24.py  p24.txt  p36.py  p37.py  p38.py  p38_1.py  p38_2.py  p38_3.py  p38_4.py  p4-8.py  p42.py  p43.py  p48.py  p5.py  p7.py  p7sub.py  p8.py
Udemy/15/: main.py
Udemy/p17/: main.py  quiz_brain.py
Udemy/p24/: main.py  my_file.txt
Udemy/p24/Input/Names/: invited_names.txt
Udemy/p25/: main1.py  weather_data.csv
