[tool.poetry]
name = "repl-nix-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_python"}]

[tool.poetry.dependencies]
python = "^3.10"
udemy = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
